updated build.gradle