@@ -1,7 +1,6 @@
 buildscript {
-    ext.kotlin_version = "1.2.60"
+    ext.kotlin_version = "1.3.72"
     ext.tornadofx_version = "1.7.17"
-    ext.junit_version = "5.1.0"
 
     repositories {
         mavenLocal()
@@ -12,14 +11,15 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.junit.platform:junit-platform-gradle-plugin:1.1.0"
         classpath 'org.openjfx:javafx-plugin:0.0.8'
+        classpath 'no.tornado:fxlauncher-gradle-plugin:1.0.21.1'
     }
 }
 
 plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.8'
+    id 'org.beryx.jlink' version '2.12.0'
 }
 
 javafx {
@@ -27,10 +27,30 @@ javafx {
     modules = [ 'javafx.controls' ]
 }
 
+jlink {
+    launcher {
+        name = 'hellofx'
+        jvmArgs = [
+                '--module-path "C:/Program Files/Java/javafx-sdk-14.0.1/lib"',
+                '--add-modules javafx.controls,javafx.fxml',
+                '--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED',
+                '--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED'
+        ]
+    }
+    addOptions('--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages')
+}
+
 apply plugin: "kotlin"
 apply plugin: "application"
-apply plugin: "org.junit.platform.gradle.plugin"
 apply plugin: 'org.openjfx.javafxplugin'
+apply plugin: 'no.tornado.fxlauncher'
+
+fxlauncher {
+    applicationVendor 'My Company'
+    applicationUrl 'http://fxldemo.tornado.no/'
+    applicationMainClass 'no.tornado.FxlDemo'
+    acceptDowngrade false
+}
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
@@ -65,12 +85,6 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.31.1'
-
-    compile group: 'de.jensd', name: 'fontawesomefx', version: '8.9'
-    compile group: 'de.jensd', name: 'fontawesomefx-commons', version: '9.1.2-jpms'
-
-    testCompile "org.junit.jupiter:junit-jupiter-api:$junit_version"
-    testRuntime "org.junit.jupiter:junit-jupiter-engine:$junit_version"
 }
 
 mainClassName = "com.example.demo.app.MyApp"
